Fix align position of text inside button

--- a/components/pages/HomePage/components/Banner/Banner.module.css
+++ b/components/pages/HomePage/components/Banner/Banner.module.css
@@ -86,13 +86,12 @@
     right: 0;
     bottom: 0;
     padding: 0.75rem 0;
-    margin: 0 0 0 1.85rem;
+    margin: 0 0 0 3rem;
     color: #fff;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 23px;
     line-height: 1.1;
     text-align: center;
-    text-transform: uppercase;
 }
 
 .learnmore_button_circle {
